Changed full size preview from cover to contain to ensure it isn't cropped

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -304,7 +304,7 @@ body {
     padding: 1.5rem 2.5rem;
     opacity: 0;
     color: black;
-    background-color: rgba($highlightFont, 0.65);
+    background-color: rgba($highlightFont, 0.25);
     clip-path: polygon(4% 0, 100% 0, 96% 100%, 0 100%);
     transform: translateX(25vw);
     transition: transform 650ms ease-out, opacity 250ms ease-in, width 400ms ease-in-out;
@@ -402,10 +402,8 @@ body {
         max-width: 75vw;
         max-height: 75vh;
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: contain;
         background-position: center;
-        outline: 4px solid white;
-        outline-offset: 2px;
     }
 
     .close-fullscreen {
@@ -413,8 +411,8 @@ body {
         justify-content: center;
         align-items: center;
         position: absolute;
-        top: 15px;
-        right: 15px;
+        top: 2vh;
+        right: 2vh;
         width: 60px;
         height: 60px;
         font-size: 3rem;
